updates and build fixes for next release

--- a/functions/send_email/package.json
+++ b/functions/send_email/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "Send email notification on new message",
     "main": "src/main.js",
+    "scripts": {
+        "start": "node src/main.js"
+    },
     "dependencies": {
         "nodemailer": "^6.9.1"
     }
